Archive2/3a/bdcf93cc0ba496/output
main.cpp: In function ‘int main()’:
main.cpp:180:60: error: no match for call to ‘(std::vector<int>) (std::vector<AttrValue>::iterator, std::vector<AttrValue>::iterator)’
     vect(attrVect.asList().begin(), attrVect.asList().end());
                                                            ^
